# 2023_in_a_wrap

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: streamlit_workflow.yml
config/: config.py
src/: download_viz.py  emotion_analyzer.py  plotly_viz.py
tests/: test_download_viz.py  test_emotion_analyzer.py  test_plotly_viz.py
